--- a/冒泡排序.md
+++ b/冒泡排序.md
@@ -71,6 +71,6 @@ int main()
 <html>
 <img src="http://note.youdao.com/yws/public/resource/d4e44ca857176bd6b51ea788a7970c9d/xmlnote/757F7C2CADBD444F91214FD7901F946A/173" width = "180" height = "180" alt="Bubble.jpg" align=center />
 </html>
-
+[图片网址](http://note.youdao.com/yws/public/resource/d4e44ca857176bd6b51ea788a7970c9d/xmlnote/757F7C2CADBD444F91214FD7901F946A/173)
 
 
