--- a/冒泡排序.md
+++ b/冒泡排序.md
@@ -68,6 +68,6 @@ int main()
  
  原数组a[]={6,763,87,2,4,7,98,5,0,14}<br>
  输出结果：
-![result](http://note.youdao.com/yws/public/resource/d4e44ca857176bd6b51ea788a7970c9d/xmlnote/757F7C2CADBD444F91214FD7901F946A/173)
+![result](https://github.com/plclovelife/studyalgorithm/blob/master/Image/Bubble.png?raw=true)
 
 
