--- a/3.希尔排序.md
+++ b/3.希尔排序.md
@@ -35,19 +35,41 @@ void ShellSort1(int a[],int n)
 	    }
 	}
 }
+
+void shellsort2(int a[], int n)  
+{//优化的希尔排序
+    int j, gap;       
+    for (gap = n / 2; gap > 0; gap /= 2)  
+    {   
+        for (j = gap; j < n; j++)//从数组第gap个元素开始  
+        {        
+	    if (a[j] < a[j - gap])//每个元素与自己组内的数据进行直接插入排序  
+            {  
+                int temp = a[j];  
+                int k = j - gap;  
+                while (k >= 0 && a[k] > temp)  
+                {  
+                    a[k + gap] = a[k];  
+                    k -= gap;  
+                }  
+                a[k + gap] = temp;  
+            }  
+        }
+    }
+}
 ```
 
 
 ```
-    //生成随机数组
-    const int N = 10;
-    int a[N];
-    int m；
-    srand((unsigned)time(NULL));//设置rand()随机种子与时间关联
-	for (m = 0; m < N; m++)
-	{
-		a[m] = rand()/100;
-	}
+//生成随机数组
+const int N = 10;
+int a[N];
+int m；
+srand((unsigned)time(NULL));//设置rand()随机种子与时间关联
+for (m = 0; m < N; m++)
+{
+    a[m] = rand()/100;
+}
 ```
 
 >运行结果：
