--- a/2.直接插入排序.md
+++ b/2.直接插入排序.md
@@ -35,4 +35,5 @@ void InsertSort1(int a[],int n)
 }
 ```
 
-
+###### 直接插与冒泡的差别（由小到大排序）：
+冒泡排序目的是将最大值放到末尾位置，是**定好位置找数据**；直接插入排序目的是将现有的值按大小插入到合适位置，是**拿着数据找位置**
