--- a/1.冒泡排序.md
+++ b/1.冒泡排序.md
@@ -54,20 +54,9 @@ void BubbleSort2(int a[], int n)//优化的冒泡排序
 	k--;
     }
 }
-int main()
-{
-    const int N = 10;//长度为10
-    int a[N] = { 6,763,87,2,4,7,98,5,0,14 };//默认数组
-    //BubbleSort1(a, N);
-    //BubbleSort2(a, N);
-    PrinfArray(a, N);
-    return 0;
-}
+
 ```
-> 运行结果
- 
- 原数组a[]={6,763,87,2,4,7,98,5,0,14}<br>
- 输出结果：
+> 长度200000随机数组排序结果：
 ![result](https://github.com/plclovelife/studyalgorithm/blob/master/Image/Bubble.png?raw=true)
 
 
