--- a/1.冒泡排序.md
+++ b/1.冒泡排序.md
@@ -57,6 +57,7 @@ void BubbleSort2(int a[], int n)//优化的冒泡排序
 
 ```
 > 长度200000随机数组排序结果：
-![result](https://github.com/plclovelife/studyalgorithm/blob/master/Image/Bubble.png?raw=true)
-
+<html>
+<img name="bubble" src="https://github.com/plclovelife/studyalgorithm/blob/master/Image/Bubble.png?raw=true" width=400>
+</html>
 
