--- a/3.希尔排序.md
+++ b/3.希尔排序.md
@@ -62,13 +62,13 @@ void shellsort2(int a[], int n)
 
 ```
 //生成随机数组
-const int N = 10;
+const int N = 200000；
 int a[N];
 int m；
 srand((unsigned)time(NULL));//设置rand()随机种子与时间关联
 for (m = 0; m < N; m++)
 {
-    a[m] = rand()/100;
+    a[m] = rand();
 }
 ```
 
