--- a/2.直接插入排序.md
+++ b/2.直接插入排序.md
@@ -39,5 +39,5 @@ void InsertSort1(int a[],int n)
 冒泡排序目的是将最大值放到末尾位置，是**定好位置找数据**；直接插入排序目的是将现有的值按大小插入到合适位置，是**拿着数据找位置**
 > 长度200000的随机数组排序结果：
 <html>
-<img name="insert" src="">
+<img name="insert" src="https://github.com/plclovelife/AlgorithmLearning/blob/master/Image/insertsort.png?raw=true">
 </html>
