--- a/4.直接选择排序.md
+++ b/4.直接选择排序.md
@@ -36,6 +36,6 @@ void SelectSort(int a[], int n)
 
 
 <html>
-<img name=selectsort src="https://github.com/plclovelife/AlgorithmLearning/blob/master/Image/select.png?raw=true" width="150">
+<img name=selectsort src="https://github.com/plclovelife/AlgorithmLearning/blob/master/Image/selectsort.png?raw=true">
 </html>
 
