--- a/4.直接选择排序.md
+++ b/4.直接选择排序.md
@@ -31,11 +31,9 @@ void SelectSort(int a[], int n)
 	}
 }
 ```
-
->结果
-
-
+> 长度200000随机数组排序结果：
 <html>
 <img name=selectsort src="https://github.com/plclovelife/AlgorithmLearning/blob/master/Image/selectsort.png?raw=true">
 </html>
+
 
