--- a/2.直接插入排序.md
+++ b/2.直接插入排序.md
@@ -6,6 +6,10 @@
 2.将a[i]并入当前的有序区a[0…i-1]中形成a[0…i]的有序区间。<br>
 3.i++并重复第二步直到i==n-1。排序完成。<br>
 
+<html>
+<img name="insert" src="https://github.com/plclovelife/AlgorithmLearning/blob/master/Image/poker.png?raw=true">
+</html>
+
 > 代码实现（C++）
 
 ```
