--- a/1.冒泡排序.md
+++ b/1.冒泡排序.md
@@ -3,6 +3,7 @@
 设数组长度为N。<br>
 1．这样对数组的第0个数据到N-1个数据进行一次遍历后，最大的一个数据就“沉”到数组第N-1个位置。<br>
 2．N=N-1，如果N不为0就重复前面二步，否则排序完成。<br>
+> 时间复杂度O(N^2)
 > 代码实现（C++）
 ```
 void Swap(int &a, int &b)//交换元素位置
