--- a/2.直接插入排序.md
+++ b/2.直接插入排序.md
@@ -5,7 +5,7 @@
 1.初始时，a[0]自成1个有序区，无序区为a[1..n-1]。令i=1<br>
 2.将a[i]并入当前的有序区a[0…i-1]中形成a[0…i]的有序区间。<br>
 3.i++并重复第二步直到i==n-1。排序完成。<br>
-
+> 时间复杂度：O(N^2)
 <html>
 <img name="insert" src="https://github.com/plclovelife/AlgorithmLearning/blob/master/Image/poker.png?raw=true">
 </html>
