--- a/4.直接选择排序.md
+++ b/4.直接选择排序.md
@@ -9,6 +9,7 @@
 1.初始时，数组全为无序区为a[0..n-1]。令i=0<br>
 2.在无序区a[i…n-1]中选取一个最小的元素，将其与a[i]交换。交换之后a[0…i]就形成了一个有序区。<br>
 3.i++并重复第二步直到i==n-1。排序完成。
+> 时间复杂度：O(N^2)
 
 > 代码实现
 
