--- a/5.归并排序.md
+++ b/5.归并排序.md
@@ -3,7 +3,8 @@
 归并排序是建立在归并操作上的一种有效的排序算法。该算法是采用分治法（Divide and Conquer）的一个非常典型的应用。<br>
 归并排序，其的基本思路就是将数组分成二组A，B，如果这二组组内的数据都是有序的，那么就可以很方便的将这二组数据进行排序。<br>
 可以将A，B组各自再分成二组。依次类推，当分出来的小组只有一个数据时，可以认为这个小组组内已经达到了有序，然后再合并相邻的二个小组就可以了。这样通过先递归的分解数列，再合并数列就完成了**归并排序**。
-> 图示：
+
+> 时间复杂度：O(NlogN)
 
 <html>
 <img name=mergesort src="https://github.com/plclovelife/AlgorithmLearning/blob/master/Image/mergesort.png?raw=true" width=440>
